--- a/calculator.css
+++ b/calculator.css
@@ -1,38 +1,136 @@
-* {
-    font-size: 30px;
+.main-container {
+    width: 350px;
+    height: 700px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+    background-color: aliceblue;
+    box-shadow: -30px -30px 70px;
+    border-radius: 40px;
+
 }
 
-.main {
-    width: 400px;
-    height: 550px;
-    border: 1px solid black;
-    background-color: darkkhaki;
-    border-radius: 10px;
-    margin-top: 20px;
-}
-
-table, {
-    border: 1px solid black;
-}
-
-table {
-    width: 200px;
-    height: 500px;
+.buttons-container {
+width: 100%;
+height: 100%px;
+background-color: aliceblue;
+display: flex;
+justify-content: center;
+align-items: center;
+flex-wrap: wrap;
+border-radius: 40px;
 }
 
 .btn {
-    background-color: #D6EEEE;
-}
-    
-.btn:hover {
-    background-color: goldenrod;
-}
-
-.textt {
-    width: 275px;
-    height: 80px;
-    margin: 0px;
-    padding: 0px;
+width: 60px;
+height: 60px;
+margin: 10px;
+font-size: large;
 }
 
+.num {
+font-weight: bolder;
+color: black;
+}
 
+.inputOne, .inputTwo {
+width: 310px;
+margin: 0px 0px;
+}
+
+.inputOne {
+height: 50px;
+background-color: #F0F0F0;
+border: none;
+}
+
+.inputTwo {
+height: 100px;
+border: none;
+}
+
+.topOne {
+width: 310px;
+height: 35px;
+position: relative;
+}
+
+.time-Icon {
+width: 60px;
+height: 30px;
+position: absolute;
+left: 0px;
+}
+
+.network-Icon {
+width: 30px;
+height: 30px;
+position: absolute;
+right: 30px;
+}
+
+.wifi-Icon {
+width: 30px;
+height: 30px;
+position: absolute;
+right: 60px;
+}
+
+.battery-Icon {
+width: 30px;
+height: 30px;
+position: absolute;
+right: 0px;
+}
+
+.topTwo {
+width: 310px;
+height: 35px;
+position: relative;
+}
+
+.menu-Icon {
+width: 60px;
+height: 30px;
+position: absolute;
+left: 0px;
+}
+
+.title {
+width: 190px;
+height: 30px;
+position: absolute;
+left: 60px;
+}
+
+.settings-Icon {
+width: 60px;
+height: 30px;
+position: absolute;
+left: 250px;
+}
+
+.top-space {
+width: 150px;
+height: 15px;
+}
+
+.network-Icon {
+text-align: right;
+}
+
+.battery-Icon {
+text-align: right;
+}
+
+.wifi-Icon {
+text-align: right;
+}
+
+.settings-Icon {
+text-align: right;
+}
+
+.title {
+text-align: center;
+color: blue;
+}
