--- a/calculator.css
+++ b/calculator.css
@@ -1,9 +1,9 @@
 .main-container {
     width: 350px;
-    height: 700px;
+    height: 650px;
     margin-top: 40px;
     margin-bottom: 20px;
-    background-color: aliceblue;
+    background-color: #D6EAF8;
     box-shadow: -30px -30px 70px;
     border-radius: 40px;
 
@@ -12,7 +12,7 @@
 .buttons-container {
 width: 100%;
 height: 100%px;
-background-color: aliceblue;
+background-color: #D6EAF8;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -25,6 +25,14 @@ width: 60px;
 height: 60px;
 margin: 10px;
 font-size: large;
+background-color: #bfc9ca !important;
+}
+
+.equal-btn {
+    width: 140px;
+    height: 60px;
+    margin: 10px;
+    font-size: large;
 }
 
 .num {
@@ -41,11 +49,14 @@ margin: 0px 0px;
 height: 50px;
 background-color: #F0F0F0;
 border: none;
+border-radius: 10px 10px 0px 0px;
 }
 
 .inputTwo {
 height: 100px;
-border: none;
+border-top: 2px solid #1F618D;
+background-color: #F0F0F0;
+border-radius: 0px 0px 10px 10px;
 }
 
 .topOne {
