--- a/calculator.css
+++ b/calculator.css
@@ -9,9 +9,9 @@
 
 }
 
-.buttons-container {
+.upper-section {
 width: 100%;
-height: 100%px;
+height: 240px;
 background-color: #D6EAF8;
 display: flex;
 justify-content: center;
@@ -20,24 +20,36 @@ flex-wrap: wrap;
 border-radius: 40px;
 }
 
+.buttons-container {
+    width: 100%;
+    height: 400px;
+    display: grid;
+    grid-template-columns: repeat(4, 80px);
+    grid-template-rows: repeat(5, 80px);
+    justify-content: center;
+    align-content: center;
+}
+
 .btn {
-width: 60px;
-height: 60px;
 margin: 10px;
 font-size: large;
 background-color: #bfc9ca !important;
 }
 
 .equal-btn {
-    width: 140px;
-    height: 60px;
-    margin: 10px;
-    font-size: large;
+    grid-column: 4;
+    grid-row: 4 / span 2;
+    background-color: #5DADE2 !important;
+    padding-left: 20px !important;
 }
 
 .num {
 font-weight: bolder;
 color: black;
+}
+
+.operator {
+    color: #3498DB !important;
 }
 
 .inputOne, .inputTwo {
